--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -2,10 +2,15 @@ mat-card-title {
   text-align: center;
 }
 
+.location-btn {
+  margin-bottom: 35px;
+}
+
 .close-btn {
   margin-top: 15px;
-  width: 48px;
-  height: 48px;
+  width: 56px;
+  height: 56px;
+  font-size: 18px;
 }
 
 .pick-image {
@@ -27,7 +32,8 @@ mat-card-title {
   mat-form-field {
     width: 600px;
   }
-  video, canvas {
+  video,
+  canvas {
     width: 700px;
   }
 }
@@ -40,7 +46,32 @@ mat-card-title {
   mat-form-field {
     width: 80%;
   }
-  video, canvas {
+  video,
+  canvas {
     width: 100%;
+  }
+  .slideup {
+    animation-name: slideup;
+    animation-duration: 300ms;
+  }
+  @keyframes slideup {
+    0% {
+      margin-top: 100vh;
+    }
+    100% {
+      margin-top: 0vh;
+    }
+  }
+  .slidedown {
+    animation-name: slidedown;
+    animation-duration: 300ms;
+  }
+  @keyframes slidedown {
+    0% {
+      margin-top: 0vh;
+    }
+    100% {
+      margin-top: 100vh;
+    }
   }
 }
