--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list>
-  <a (click)='onClose()' mat-list-item routerLink='/feed'>Feed</a>
-  <a (click)='onClose()' mat-list-item routerLink='/help'>Help</a>
+  <a (click)='onClose()' mat-list-item routerLinkActive='active' routerLink='/feed'>Feed</a>
+  <a (click)='onClose()' mat-list-item routerLinkActive='active' routerLink='/help'>Help</a>
   <mat-list-item>
     <button fxShow.gt-xs style="margin-left: 25px;" mat-raised-button (click)='onEnableNotifications()' color='accent'>ENABLE NOTIFICATIONS</button>
   </mat-list-item>
