--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color='primary'>
+<mat-toolbar class="mat-elevation-z2" color='primary'>
   <button mat-icon-button fxHide.gt-xs (click)='onToggle()'>
     <mat-icon>menu</mat-icon>
   </button>
